# WALObserver

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
scripts/: db-shell.sh  init-db.sh  load-generator.sh  reset-db.sh  start-db.sh  stop-db.sh
scripts/sql/: schema.sql  seed.sql
src/: charts_data.rs  events.rs  lib.rs  main.rs  storage.rs  tick.rs
src/collectors/: functions.rs  mod.rs  pg_replication_slots.rs  settings.rs  wal_dir.rs
src/collectors/pg_stat/: mod.rs  pg_stat_activity.rs  pg_stat_archiver.rs  pg_stat_bgwriter.rs  pg_stat_database.rs  pg_stat_database_conflicts.rs  pg_stat_recovery_prefetch.rs  pg_stat_replication.rs  pg_stat_replication_slots.rs  pg_stat_user_tables.rs  pg_stat_wal.rs  pg_stat_wal_receiver.rs
src/readers/: main_log.rs  mod.rs
